--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
 	<head>
-		<title>What The Fuck Is&hellip;</title>
-		<meta name="description" content="A {something} idea generator" />
-		<meta name="copyright" content="Copyright Justin Windle 2014. All Rights Reserved." />
-		<meta name="author" content="Justin Windle" />
+		<title>What The Fuck Are K-Dramas</title>
+		<meta name="description" content="A kdrama idea generator" />
+		<meta name="copyright" content="Copyright Jin Park and Lydia Ding 2014. All Rights Reserved." />
+		<meta name="author" content="Jin Park" />
 		<link rel="apple-touch-icon" href="images/custom_icon.png"/>
 		<link rel="shortcut icon" href="images/favicon.png"/>
 		<link rel="stylesheet" href="styles/main.css" />
@@ -12,7 +12,7 @@
 	<body>
 		<div id="wrapper">
 		    <header>
-		        <h1>What The Fuck Is&hellip;</h1>
+		        <h1>What The Fuck Are K-Dramas</h1>
 		    </header>
 		    <article>
 		        <div id="output">
@@ -27,13 +27,13 @@
 		    </article>
 		    <aside>
 		        <ul id="share">
-		            <li id="share-facebook"><iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwhatthefuckismymashup.com&amp;layout=button_count&amp;show_faces=true&amp;width=80&amp;action=like&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:80px; height:21px;" allowTransparency="true"></iframe></li>
-		            <li id="share-twitter"><a href="http://twitter.com/share" class="twitter-share-button" data-url="http://whatthefuckismymashup.com" data-count="horizontal" data-via="soulwire">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script></li>
+		            <li id="share-facebook"><iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fdramafever.com&amp;layout=button_count&amp;show_faces=true&amp;width=80&amp;action=like&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:80px; height:21px;" allowTransparency="true"></iframe></li>
+		            <li id="share-twitter"><a href="http://twitter.com/share" class="twitter-share-button" data-url="http://www.dramafever.com" data-count="horizontal" data-via="soulwire">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script></li>
 		        </ul>
 		    </aside>
 		    <footer>
-		        <div id="about">If you make it, make sure you make it <a href="http://www.opensource.org/" target="blank">Open Source</a></div>
-		        <div id="credit">Built with <a href="https://github.com/soulwire/WTFEngine" title="An HTML / CSS / JavaScript template for creating WhatTheFuckIsMyMashup.com style web sites" target="_blank">WTF Engine</a> by <a href="http://blog.soulwire.co.uk/" title="Made by Justin Windle @soulwire">Justin</a></div>
+		        <div id="about">Watch K-Dramas at  <a href="http://www.dramafever.com/" target="blank">DramaFever</a></div>
+		        <div id="credit">Built with love by <a href="http://jinpark.net" title="Jin Park's Website" target="_blank">Jin Park</a></div>
 		        <div>Inspired by <a href="http://whatthefuckshouldimakefordinner.com/" target="_blank">WTFSIMFD<a/></div>
 		    </footer>
 		    <img class="loading" src="images/loading.gif">
