extra ending div tag remove

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		        </ul>
 		    </aside>
 		    <footer>
-		        <div id="about"> K-Drama recaps and more at </div> <a href="http://www.kaedejun.com" target="blank">KaedeJun</a></div>
+		        <div id="about"> K-Drama recaps and more at <a href="http://www.kaedejun.com" target="blank">KaedeJun</a></div>
 		        <div id="credit">Built with love by <a href="http://jinpark.net" title="Jin Park's Website" target="_blank">Jin Park</a></div>
 		        <div>Inspired by <a href="http://whatthefuckshouldimakefordinner.com/" target="_blank">WTFSIMFD<a/></div>
 		    </footer>
